[package]
name = "feeds-and-speeds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
patternfly-yew = { version = "0.4.0-alpha.1", features = ["icons-fab"], path="../patternfly-yew" }
strum = "0.24"
strum_macros = "0.24"
log = "0.4"
wasm-logger = "0.2.0"